--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     />
     <style>
       :root {
-        --blue: hsl(235, 45%, 61%);
-
         --work: hsl(15, 100%, 70%);
         --play: hsl(195, 74%, 62%);
         --study: hsl(348, 100%, 68%);
@@ -119,8 +117,8 @@
       .avatar {
         width: 70px;
         height: 70px;
-        border: 2px solid;
         border-radius: 50%;
+        border: 2px solid white;
       }
       .name {
         font-size: 1.4em;
@@ -203,7 +201,7 @@
       }
       .card-body h2 {
         font-size: 18px;
-        font-weight: 400;
+        font-weight: 500;
       }
       .duration,
       .duration h3 {
